--- a/meson.build
+++ b/meson.build
@@ -5,3 +5,10 @@ project(
     meson_version: '>=0.61.2',
     default_options: ['warning_level=3', 'werror=true', 'c_std=gnu11', 'cpp_std=gnu++17', 'optimization=g'],
 )
+
+src_files=[]
+inc_dir=[]
+
+subdir('src')
+
+subdir('tests')
