add: zk_slist_sort and _zk_slit_front_back_split function

--- a/meson.build
+++ b/meson.build
@@ -6,6 +6,15 @@ project(
     default_options: ['warning_level=3', 'werror=true', 'c_std=gnu11', 'cpp_std=gnu++17', 'optimization=g'],
 )
 
+#  options
+unit_test = get_option('unit_test')
+
+if unit_test
+    add_project_arguments('-DUNIT_TEST', language : 'c')
+endif
+
 subdir('src')
 
-subdir('tests')
+if unit_test
+    subdir('tests')
+endif
