Use alpine as docker image for both build and debug images
Packages related to lint were removed and a new image for lint will be created
in a further commit.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "editorconfig.editorconfig",
         "ms-vscode.cpptools",
         "gruntfuggly.todo-tree",
-        "donjayamanne.githistory"
+        "donjayamanne.githistory",
+        "cschlosser.doxdocgen"
     ]
 }
