--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -4,10 +4,6 @@ LABEL maintainer="zklib"
 
 WORKDIR /workdir
 
-ENV TZ=Europe/Amsterdam
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-
 RUN \
-    apt-get update && apt-get install -y \
-        gdb \
-    && rm -rf /var/lib/apt/lists/*
+    apk add --no-cache \
+        gdb
