--- a/examples/zk_slist/meson.build
+++ b/examples/zk_slist/meson.build
@@ -1,2 +1,3 @@
 ex_zk_slist_append = executable('append', sources: ['append.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_concat = executable('concat', sources: ['concat.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+ex_zk_slist_copy = executable('copy', sources: ['copy.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
