Add function documentation and example for zk_slit_copy_full()
Replace \code command to \include in functions documentation to insert examples

--- a/examples/zk_slist/meson.build
+++ b/examples/zk_slist/meson.build
@@ -1,3 +1,4 @@
 ex_zk_slist_append = executable('append', sources: ['append.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_concat = executable('concat', sources: ['concat.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_copy = executable('copy', sources: ['copy.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+ex_zk_slist_copy_deep = executable('copy_deep', sources: ['copy_deep.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
