--- a/examples/zk_slist/meson.build
+++ b/examples/zk_slist/meson.build
@@ -4,3 +4,4 @@ ex_zk_slist_copy = executable('copy', sources: ['copy.c'], include_directories: 
 ex_zk_slist_copy_deep = executable('copy_deep', sources: ['copy_deep.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_delete_node = executable('delete_node', sources: ['delete_node.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_find = executable('find', sources: ['find.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+ex_zk_slist_foreach = executable('foreach', sources: ['foreach.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
