--- a/examples/zk_slist/meson.build
+++ b/examples/zk_slist/meson.build
@@ -5,3 +5,4 @@ ex_zk_slist_copy_deep = executable('copy_deep', sources: ['copy_deep.c'], includ
 ex_zk_slist_delete_node = executable('delete_node', sources: ['delete_node.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_find = executable('find', sources: ['find.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_foreach = executable('foreach', sources: ['foreach.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+ex_zk_slist_free = executable('free', sources: ['free.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
