Add code example and fix documentation for and remove unnecessary code for zk_slist_reverse().
Small code refator on the while loop of zk_slist_delete_node().

--- a/examples/zk_slist/meson.build
+++ b/examples/zk_slist/meson.build
@@ -7,3 +7,4 @@ ex_zk_slist_find = executable('find', sources: ['find.c'], include_directories: 
 ex_zk_slist_foreach = executable('foreach', sources: ['foreach.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_free = executable('free', sources: ['free.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_index = executable('index', sources: ['index.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+ex_zk_slist_reverse = executable('reverse', sources: ['reverse.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
