--- a/examples/zk_slist/meson.build
+++ b/examples/zk_slist/meson.build
@@ -7,4 +7,6 @@ ex_zk_slist_find = executable('find', sources: ['find.c'], include_directories: 
 ex_zk_slist_foreach = executable('foreach', sources: ['foreach.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_free = executable('free', sources: ['free.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_index = executable('index', sources: ['index.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+ex_zk_slist_insert = executable('insert', sources: ['insert.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+ex_zk_slist_length = executable('length', sources: ['length.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_reverse = executable('reverse', sources: ['reverse.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
