--- a/examples/zk_slist/meson.build
+++ b/examples/zk_slist/meson.build
@@ -10,4 +10,5 @@ ex_zk_slist_index = executable('index', sources: ['index.c'], include_directorie
 ex_zk_slist_insert = executable('insert', sources: ['insert.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_length = executable('length', sources: ['length.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_nth = executable('nth', sources: ['nth.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+ex_zk_slist_prepend = executable('prepend', sources: ['prepend.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_reverse = executable('reverse', sources: ['reverse.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
