Add example and function documentation to zk_slist_insert_before().

--- a/examples/zk_slist/meson.build
+++ b/examples/zk_slist/meson.build
@@ -8,6 +8,7 @@ ex_zk_slist_foreach = executable('foreach', sources: ['foreach.c'], include_dire
 ex_zk_slist_free = executable('free', sources: ['free.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_index = executable('index', sources: ['index.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_insert = executable('insert', sources: ['insert.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+ex_zk_slist_insert_before = executable('insert_before', sources: ['insert_before.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_last = executable('last', sources: ['last.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_length = executable('length', sources: ['length.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 ex_zk_slist_nth = executable('nth', sources: ['nth.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
