--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: zklib
+email: joseigorcfm@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -27,30 +27,27 @@ description: >- # this means to ignore newlines until "baseurl:"
 domain: zklib.github.io  # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
 url: https://zklib.github.io # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/zklib" # the subpath of your site, e.g. /blog
-twitter_username: jekyllrb
-github_username:  jekyll
+
 
 # Build settings
-theme: minima
+remote_theme: just-the-docs/just-the-docs
 plugins:
   - jekyll-feed
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+
+collections:
+  versions:
+    permalink: "/:collection/:path/"
+    output: true
+
+just_the_docs:
+  collections:
+    versions:
+      name: Versions
+      nav_exclude: false
+      nav_fold: true
+      search_exclude: false
+
+aux_links:
+  "zklib on GitHub":
+    - "//github.com/zklib/zklib"
