Add unit tests for following zk_dlist functions: zk_begin(), zk_end(), zk_for_each(), zk_free(), zk_push_back()

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,5 +1,17 @@
 unity_dep = dependency('unity', method : 'pkg-config' , fallback : ['unity', 'unity_dep'])
 
+
+test_zk_dlist = \
+    executable(
+        'test_zk_dlist',
+        sources: ['test_zk_dlist.c'],
+        dependencies: [
+            unity_dep,
+            zklib_dep
+        ],
+        include_directories : inc_dir
+    )
+
 test_zk_slist = \
     executable(
         'test_zk_slist',
@@ -11,4 +23,5 @@ test_zk_slist = \
         include_directories : inc_dir
     )
 
+test('test_zk_dlist', test_zk_dlist)
 test('test_zk_slist', test_zk_slist)
