--- a/src/meson.build
+++ b/src/meson.build
@@ -3,7 +3,8 @@ inc_dir = []
 
 inc_dir += include_directories('.')
 
+subdir('zk_c_dlist')
 subdir('zk_c_slist')
-subdir('zk_slist')
 subdir('zk_dlist')
+subdir('zk_slist')
 subdir('zk')
