--- a/tests/meson.build
+++ b/tests/meson.build
@@ -15,6 +15,14 @@ test_zk_c_slist = \
         include_directories : [inc_dir, tests_inc_dir]
     )
 
+test_zk_c_dlist = \
+    executable(
+        'test_zk_c_dlist',
+        sources: ['test_zk_c_dlist.c',tests_src_files],
+        dependencies: [ unity_dep, zklib_dep ],
+        include_directories : [inc_dir, tests_inc_dir]
+    )
+
 test_zk_dlist = \
     executable(
         'test_zk_dlist',
@@ -31,6 +39,7 @@ test_zk_slist = \
         include_directories : [inc_dir, tests_inc_dir]
     )
 
+test('test_zk_c_dlist', test_zk_c_dlist)
 test('test_zk_c_slist', test_zk_c_slist)
 test('test_zk_dlist', test_zk_dlist)
 test('test_zk_slist', test_zk_slist)
