Remove unnecessary assigment from examples meson files

--- a/examples/zk_c_slist/meson.build
+++ b/examples/zk_c_slist/meson.build
@@ -1,7 +1,9 @@
+# Destructor
+executable('free', sources: ['free.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+
 # Iterators
-ex_zk_c_slist_begin_end = executable('begin_end', sources: ['begin_end.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
-ex_zk_c_slist_for_each = executable('for_each', sources: ['for_each.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
-ex_zk_c_slist_free = executable('free', sources: ['free.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+executable('begin_end', sources: ['begin_end.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+executable('for_each', sources: ['for_each.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 
 # Modifiers
-ex_zk_c_slist_push_back = executable('push_back', sources: ['push_back.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+executable('push_back', sources: ['push_back.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
