--- a/examples/zk_slist/meson.build
+++ b/examples/zk_slist/meson.build
@@ -15,6 +15,7 @@ executable('reverse', sources: ['reverse.c'], include_directories: inc_dir, depe
 executable('free', sources: ['free.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 
 # Interators
+executable('begin_end', sources: ['begin_end.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 executable('for_each', sources: ['for_each.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 
 
