--- a/examples/zk_slist/meson.build
+++ b/examples/zk_slist/meson.build
@@ -20,6 +20,8 @@ executable('for_each', sources: ['for_each.c'], include_directories: inc_dir, de
 
 
 # Modifiers
+executable('pop_back', sources: ['pop_back.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+executable('pop_front', sources: ['pop_front.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 executable('push_back', sources: ['push_back.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 executable('push_front', sources: ['push_front.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 
