--- a/examples/zk_c_dlist/meson.build
+++ b/examples/zk_c_dlist/meson.build
@@ -6,5 +6,7 @@ executable('begin_end', sources: ['begin_end.c'], include_directories: inc_dir, 
 executable('for_each', sources: ['for_each.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 
 # Modifiers
+executable('pop_back', sources: ['pop_back.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
+executable('pop_front', sources: ['pop_front.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 executable('push_back', sources: ['push_back.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
 executable('push_front', sources: ['push_front.c'], include_directories: inc_dir, dependencies: [ zklib_dep ])
