Turn zk_slist an opaque struct
Add function zk_get_data() and zk_next() for zk_slist

Disable compiler warning for unused-but-set-parameter. This is needed as some functions just set some parameters but do not use it. Examples are zk_get_data() and zk_next()

--- a/meson.build
+++ b/meson.build
@@ -6,6 +6,14 @@ project(
     default_options: ['warning_level=3', 'werror=true', 'c_std=gnu11', 'cpp_std=gnu++17', 'optimization=g'],
 )
 
+project_cflags = [
+    '-Wno-unused-but-set-parameter',
+]
+
+cc = meson.get_compiler('c')
+
+add_project_arguments(cc.get_supported_arguments(project_cflags), language : 'c')
+
 #  options
 unit_test = get_option('unit_test')
 
