--- a/tests/meson.build
+++ b/tests/meson.build
@@ -6,11 +6,12 @@ tests_inc_dir = []
 tests_inc_dir += include_directories('.')
 
 subdir('common')
+subdir('zk_slist')
 
 test_zk_c_slist = \
     executable(
         'test_zk_c_slist',
-        sources: ['test_zk_c_slist.c',tests_src_files],
+        sources: ['test_zk_c_slist.c', tests_src_files],
         dependencies: [ unity_dep, zklib_dep ],
         include_directories : [inc_dir, tests_inc_dir]
     )
@@ -18,7 +19,7 @@ test_zk_c_slist = \
 test_zk_c_dlist = \
     executable(
         'test_zk_c_dlist',
-        sources: ['test_zk_c_dlist.c',tests_src_files],
+        sources: ['test_zk_c_dlist.c', tests_src_files],
         dependencies: [ unity_dep, zklib_dep ],
         include_directories : [inc_dir, tests_inc_dir]
     )
@@ -26,7 +27,7 @@ test_zk_c_dlist = \
 test_zk_dlist = \
     executable(
         'test_zk_dlist',
-        sources: ['test_zk_dlist.c',tests_src_files],
+        sources: ['test_zk_dlist.c', tests_src_files],
         dependencies: [ unity_dep, zklib_dep ],
         include_directories : [inc_dir, tests_inc_dir]
     )
@@ -34,7 +35,7 @@ test_zk_dlist = \
 test_zk_slist = \
     executable(
         'test_zk_slist',
-        sources: ['test_zk_slist.c',tests_src_files],
+        sources: ['test_zk_slist.c', tests_src_files],
         dependencies: [ unity_dep, zklib_dep ],
         include_directories : [inc_dir, tests_inc_dir]
     )
@@ -42,4 +43,4 @@ test_zk_slist = \
 test('test_zk_c_dlist', test_zk_c_dlist)
 test('test_zk_c_slist', test_zk_c_slist)
 test('test_zk_dlist', test_zk_dlist)
-test('test_zk_slist', test_zk_slist)
+test('test_zk_slist', test_zk_slist, suite : 'zk_slist')
