--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,10 +24,10 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-domain: zklib.github.io  # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
-url: https://zklib.github.io # the base hostname & protocol for your site, e.g. http://example.com
+domain: joseigor.github.io  # if you want to force HTTPS, specify the domain without the http at the start, e.g. example.com
+url: https://joseigor.github.io # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/zklib" # the subpath of your site, e.g. /blog
-
+search_enabled: true
 
 # Build settings
 remote_theme: just-the-docs/just-the-docs
