--- a/tests/zk_slist/meson.build
+++ b/tests/zk_slist/meson.build
@@ -3,7 +3,7 @@ test_zk_slist_reverse = \
         'test_zk_slist_reverse',
         sources: ['test_zk_slist_reverse.c'],
         dependencies: [ unity_dep, zklib_dep ],
-        include_directories : [inc_dir, tests_inc_dir]
+        include_directories : [inc_dir]
     )
 
 test_zk_slist_size = \
@@ -11,7 +11,7 @@ test_zk_slist_size = \
         'test_zk_slist_size',
         sources: ['test_zk_slist_size.c'],
         dependencies: [ unity_dep, zklib_dep ],
-        include_directories : [inc_dir, tests_inc_dir]
+        include_directories : [inc_dir]
     )
 
 test_zk_slist_merge = \
@@ -19,7 +19,7 @@ test_zk_slist_merge = \
         'test_zk_slist_merge',
         sources: ['test_zk_slist_merge.c'],
         dependencies: [ unity_dep, zklib_dep ],
-        include_directories : [inc_dir, tests_inc_dir]
+        include_directories : [inc_dir]
     )
 
 test_zk_slist_sort = \
@@ -27,7 +27,7 @@ test_zk_slist_sort = \
         'test_zk_slist_sort',
         sources: ['test_zk_slist_sort.c'],
         dependencies: [ unity_dep, zklib_dep ],
-        include_directories : [inc_dir, tests_inc_dir]
+        include_directories : [inc_dir]
     )
 
 test_zk_slist_find = \
@@ -35,7 +35,7 @@ test_zk_slist_find = \
         'test_zk_slist_find',
         sources: ['test_zk_slist_find.c'],
         dependencies: [ unity_dep, zklib_dep ],
-        include_directories : [inc_dir, tests_inc_dir]
+        include_directories : [inc_dir]
     )
 
 test_zk_slist_find_index = \
@@ -43,7 +43,7 @@ test_zk_slist_find_index = \
         'test_zk_slist_find_index',
         sources: ['test_zk_slist_find_index.c'],
         dependencies: [ unity_dep, zklib_dep ],
-        include_directories : [inc_dir, tests_inc_dir]
+        include_directories : [inc_dir]
     )
 
 test_zk_slist_push_front = \
@@ -51,7 +51,7 @@ test_zk_slist_push_front = \
         'test_zk_slist_push_front',
         sources: ['test_zk_slist_push_front.c'],
         dependencies: [ unity_dep, zklib_dep ],
-        include_directories : [inc_dir, tests_inc_dir]
+        include_directories : [inc_dir]
     )
 
 test_zk_slist_push_back = \
@@ -59,7 +59,7 @@ test_zk_slist_push_back = \
         'test_zk_slist_push_back',
         sources: ['test_zk_slist_push_back.c'],
         dependencies: [ unity_dep, zklib_dep ],
-        include_directories : [inc_dir, tests_inc_dir]
+        include_directories : [inc_dir]
     )
 
 test_zk_slist_pop_front = \
@@ -67,7 +67,7 @@ test_zk_slist_pop_front = \
         'test_zk_slist_pop_front',
         sources: ['test_zk_slist_pop_front.c'],
         dependencies: [ unity_dep, zklib_dep ],
-        include_directories : [inc_dir, tests_inc_dir]
+        include_directories : [inc_dir]
     )
 
 test_zk_slist_pop_back = \
@@ -75,7 +75,39 @@ test_zk_slist_pop_back = \
         'test_zk_slist_pop_back',
         sources: ['test_zk_slist_pop_back.c'],
         dependencies: [ unity_dep, zklib_dep ],
-        include_directories : [inc_dir, tests_inc_dir]
+        include_directories : [inc_dir]
+    )
+
+test_zk_slist_new_node = \
+    executable(
+        'test_zk_slist_new_node',
+        sources: ['test_zk_slist_new_node.c'],
+        dependencies: [ unity_dep, zklib_dep ],
+        include_directories : [inc_dir]
+    )
+
+test_zk_slist_begin = \
+    executable(
+        'test_zk_slist_begin',
+        sources: ['test_zk_slist_begin.c'],
+        dependencies: [ unity_dep, zklib_dep ],
+        include_directories : [inc_dir]
+    )
+
+test_zk_slist_end = \
+    executable(
+        'test_zk_slist_end',
+        sources: ['test_zk_slist_end.c'],
+        dependencies: [ unity_dep, zklib_dep ],
+        include_directories : [inc_dir]
+    )
+
+test_zk_slist_for_each = \
+    executable(
+        'test_zk_slist_for_each',
+        sources: ['test_zk_slist_for_each.c'],
+        dependencies: [ unity_dep, zklib_dep ],
+        include_directories : [inc_dir]
     )
 
 test('test_zk_slist_reverse', test_zk_slist_reverse, suite: 'zk_slist')
@@ -88,4 +120,8 @@ test('test_zk_slist_push_front', test_zk_slist_push_front, suite: 'zk_slist')
 test('test_zk_slist_push_back', test_zk_slist_push_back, suite: 'zk_slist')
 test('test_zk_slist_pop_front', test_zk_slist_pop_front, suite: 'zk_slist')
 test('test_zk_slist_pop_back', test_zk_slist_pop_back, suite: 'zk_slist')
+test('test_zk_slist_new_node', test_zk_slist_new_node, suite: 'zk_slist')
+test('test_zk_slist_begin', test_zk_slist_begin, suite: 'zk_slist')
+test('test_zk_slist_end', test_zk_slist_end, suite: 'zk_slist')
+test('test_zk_slist_for_each', test_zk_slist_for_each, suite: 'zk_slist')
 
