feat(zk_vector): initial implementation of zk_vector
Adds the following functions:
- zk_vector_capacity
- zk_vector_free
- zk_vector_new
- zk_vector_size

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -7,6 +7,7 @@ tests_inc_dir += include_directories('.')
 
 subdir('common')
 subdir('zk_slist')
+subdir('zk_vector')
 
 test_zk_c_slist = \
     executable(
