--- a/src/meson.build
+++ b/src/meson.build
@@ -7,5 +7,5 @@ subdir('zk_c_dlist')
 subdir('zk_c_slist')
 subdir('zk_dlist')
 subdir('zk_slist')
-subdir('zk_vector')
+subdir('zk_vec')
 subdir('zk')
